--- a/js循环.html
+++ b/js循环.html
@@ -38,11 +38,41 @@
 
     var x = 0;
     for (;;) { // 将无限循环下去
-      if (x > 100) {
+      if (x < 100) {
         break; // 通过if判断来退出循环
       }
       x++;
     }
+
+    var o = {
+      name: "abc",
+      age: "18",
+      sex: "男"
+    }
+    for (var key in o) {
+      console.log(key);
+    }
+
+    var a = ['A', 'B', 'C'];
+    for (var i in a) {
+      console.log(i); //string
+      console.log(a[i]);
+    }
+
+    // for循环在已知循环的初始和结束条件时非常有用。 而上述忽略了条件的for循环容易让人看不清循环的逻辑， 此时用while循环更佳。
+    // while循环只有一个判断条件， 条件满足， 就不断循环， 条件不满足时则退出循环。 比如我们要计算100以内所有奇数之和， 可以用while循环实现：
+
+    var x = 0;
+    var n = 99;
+    while (n > 0) {
+      x = x + n;
+      n = n - 2;
+    }
+    x; // 2500
+    console.log(x);
+    // 在循环内部变量n不断自减，直到变为-1时，不再满足while条件，循环退出。
+
+    
   </script>
 </body>
 
