--- a/js循环.html
+++ b/js循环.html
@@ -72,7 +72,13 @@
     console.log(x);
     // 在循环内部变量n不断自减，直到变为-1时，不再满足while条件，循环退出。
 
-    
+    // 最后一种循环是do { ... } while()循环，它和while循环的唯一区别在于，不是在每次循环开始的时候判断条件，而是在每次循环完成的时候判断条件：
+    var n = 0;
+    do {
+      n = n + 1;
+    } while (n < 100);
+    n; // 100
+    // 用do { ... } while()循环要小心，循环体会至少执行1次，而for和while循环则可能一次都不执行。
   </script>
 </body>
 
