--- a/js循环.html
+++ b/js循环.html
@@ -58,6 +58,10 @@
       console.log(i); //string
       console.log(a[i]);
     }
+    var arr = ['A','B',"C"];
+    for (var i in arr){
+      console.log(`hello,${a[i]}`);
+    }
 
     // for循环在已知循环的初始和结束条件时非常有用。 而上述忽略了条件的for循环容易让人看不清循环的逻辑， 此时用while循环更佳。
     // while循环只有一个判断条件， 条件满足， 就不断循环， 条件不满足时则退出循环。 比如我们要计算100以内所有奇数之和， 可以用while循环实现：
